Finalized external.js

--- a/demo/sect-title.html
+++ b/demo/sect-title.html
@@ -1,2 +1,10 @@
 <h1>My reveal.js plugins demo</h1>
 <footer>Presenter plugins: webcam, inking, math, external</footer>
+
+
+<div data-outer-text><!--
+function(e) {
+    e.addEventListener('click', ()=>{console.log("!")});
+    return "<span>" + [1,2,3].join('</span>+<span>') + "</span>"
+}
+--></div>
