--- a/demo/sect-external.html
+++ b/demo/sect-external.html
@@ -4,7 +4,7 @@
 </section>
 
 <section>
-    <p>This list is populated with an automated script:</p>
+    <p>This list items are assigned <code>fragment</code> class with an automated script:</p>
     <ul class="auto-fragmentize">
         <li>One</li>
         <li>Two</li>
