--- a/demo/demo.html
+++ b/demo/demo.html
@@ -27,17 +27,19 @@
 <script src="../reveal/plugin/notes/notes.js"></script>
 <script src="../reveal/plugin/highlight/highlight.js"></script>
 
-<script src="../reveal-custom/plugins/external/contentloader.js"></script>
+<script src="../reveal-custom/plugins/contentloader.js"></script>
 
 <link rel="stylesheet" href="../reveal-custom/plugins/menu/font-awesome/css/all.css">
 <link rel="stylesheet" href="../reveal-custom/plugins/menu/menu.css">
 <script src="../reveal-custom/plugins/menu/menu.js"></script>
 
 
-<script src="../reveal-custom/plugins/math-mod/math.js"></script>
+<script src="../reveal-custom/plugins/math.js"></script>
 <!--<script src="../reveal-custom/plugins/math-katex/math-katex.js"></script>-->
 
-<script src="../reveal-custom/plugins/inking/inking.js"></script>
+<script src="../reveal-custom/plugins/highlight-ace/highlight-ace.js"></script>
+
+<script src="../reveal-custom/plugins/inking.js"></script>
 <script src="../reveal-custom/plugins/zoom-js-mod/zoom.js"></script>
 <script src="../reveal-custom/plugins/webcam/webcam.js"></script>
 
@@ -88,12 +90,14 @@
     Reveal.initialize({
         plugins: [
             RevealContentLoader,
-            RevealHighlight,
+            // RevealHighlight,
             // RevealNotes,
+
             RevealMenu,
             RevealMath,
             RevealInking,
             RevealZoom,
+            RevealHighlightAce,
             // RevealWebcam
         ],
         slideNumber: true,
@@ -170,7 +174,7 @@
             }
         },
         highlighting: {
-            editorInPlace: true
+            editorInPlace: false
         },
         zooming: {
             explicitZoomables: false,
