Refactoring the plugins

--- a/demo/sect-external.html
+++ b/demo/sect-external.html
@@ -1,6 +1,6 @@
 <section>
     This code is loaded with <code>data-inner-text="..."</code>
-    <pre><code data-inner-text="code/example.py" class="language-python" contenteditable="true"></code></pre>
+    <pre><code data-inner-text="code/example.py" class="language-python" contenteditable="true" data-editor-in-place></code></pre>
 </section>
 
 <section>
