--- a/demo/demo.html
+++ b/demo/demo.html
@@ -20,6 +20,7 @@
 <div class="reveal"><div class="slides">
     <section title="Title" data-inner-html="sect-title.html"></section>
     <section title="External.js plugin" data-outer-html="sect-external.html"></section>
+    <section title="PDF images"><canvas style="height: 400px; width: 600px;" data-pdf="img/one-liners.pdf" width=600 height=400></canvas></section>
 </div></div>
 
 
@@ -40,8 +41,10 @@
 <script src="../reveal-custom/plugins/highlight-ace.js"></script>
 
 <script src="../reveal-custom/plugins/inking.js"></script>
-<script src="../reveal-custom/plugins/zoom-js-mod/zoom.js"></script>
+<script src="../reveal-custom/plugins/zoom.js"></script>
 <script src="../reveal-custom/plugins/webcam.js"></script>
+
+<script src="../reveal-custom/plugins/pdfimgs.js"></script>
 
 <script type="text/latex" id="mathjaxPreamble">
     \DeclareMathOperator{\roots}{roots}
@@ -99,6 +102,7 @@
             RevealZoom,
             RevealHighlightAce,
             // RevealWebcam
+            RevealPDFJS
         ],
         slideNumber: true,
         width: 1280,
