--- a/demo/demo.html
+++ b/demo/demo.html
@@ -21,6 +21,7 @@
     <section title="Title" data-inner-html="sect-title.html"></section>
     <section title="External.js plugin" data-outer-html="sect-external.html"></section>
     <section title="PDF images"><canvas style="height: 400px; width: 600px;" data-pdf="img/one-liners.pdf" width=600 height=400></canvas></section>
+    <section title="PDF images"><canvas style="height: 400px; width: 600px;" data-pdf="img/one-liners.pdf" data-page="20" width=600 height=400></canvas></section>
 </div></div>
 
 
