--- a/demo/sect-title.html
+++ b/demo/sect-title.html
@@ -2,7 +2,7 @@
 <footer>Presenter plugins: webcam, inking, math, external</footer>
 
 
-<div data-outer-text><!--
+<div data-inner-html><!--
 function(e) {
     e.addEventListener('click', ()=>{console.log("!")});
     return "<span>" + [1,2,3].join('</span>+<span>') + "</span>"
