--- a/demo/demo.html
+++ b/demo/demo.html
@@ -22,7 +22,7 @@
     <section title="External.js plugin" data-outer-html="sect-external.html"></section>
     <section title="PDF images"><canvas style="height: 400px; width: 600px;" data-pdf="img/one-liners.pdf" width=600 height=400></canvas></section>
     <section title="PDF images">
-        <canvas class="r-stretch" style="height: 1000px; width: 600px;" data-pdf="img/one-liners.pdf" data-pages="18-20" width=600 height=400></canvas>
+        <canvas class="r-stretch" style="height: 1000px; width: 600px;" data-pdf="img/one-liners.pdf" data-pages="1,3;18-20" width=600 height=400></canvas>
     </section>
 </div></div>
 
