Fixed math in svg positioning

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -26,8 +26,10 @@
 
 <body>
 <div class="reveal"><div class="slides">
+    <section title="Inking preloaded data" data-inner-html="sect-inking-preload.html"></section>
+    <section title="SVG with math" data-inner-html="sect-svg.html"></section>
     <section title="Embedding vega-lite charts" data-inner-html="sect-altair.html"></section>
-    <section title="Python code" data-inner-html="sect-python.html"></section>
+    <section title="Python code" data-qinner-html="sect-python.html"></section>
     <section title="Title" data-inner-html="sect-title.html"></section>
     <section title="External.js plugin" data-outer-html="sect-external.html"></section>
     <section title="PDF images"><canvas style="height: 400px; width: 600px;" data-pdf="img/one-liners.pdf" width=600 height=400></canvas></section>
