--- a/demo/sect-python.html
+++ b/demo/sect-python.html
@@ -1,7 +1,7 @@
 <section>
   <pre><code
             data-inner-text="code/example.py"
-            class="language-python runnable"
+            data-language="python"
             contenteditable="true"
             data-editor-in-place></code></pre>
 </section>
@@ -9,7 +9,10 @@
 <section>
   <pre><code
           data-inner-text="code/example-autorun.py"
-          class="language-python run-with-deck run-on-edit output-as-fragment"
+          data-language="python"
+          data-run-with-deck
+          data-run-on-edit
+          data-output-as-fragment
           contenteditable="true"
           data-editor-in-place></code></pre>
 </section>
@@ -17,7 +20,9 @@
 <section>
   <pre><code
           data-stdout="#seperateoutput"
-          class="language-python run-on-edit run-with-deck output-as-fragment"
+          data-language="python"
+          data-run-on-edit
+          data-run-with-deck
           contenteditable="true"
           data-editor-in-place
           data-trim>
