--- a/demo/sect-inking-preload.html
+++ b/demo/sect-inking-preload.html
@@ -1,3 +1,7 @@
-<section>
-    <svg data-external-replace="absolute_value_composition.svg"></svg>
+<section data-inking-canvas-src="img/absolute_value_composition.svg">
+    This is a slide with preloaded canvas content.
+</section>
+
+<section data-inking-canvas-src="img/absolute_value_composition.svg:split">
+    This is a slide with preloaded canvas content which is split into pieces.
 </section>
