--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,62 +4,74 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>reveal.js</title>
+    <title>Demo of Alex Dainiak’s Reveal.js plugins</title>
 
     <link rel="stylesheet" href="../reveal/dist/reset.css">
     <link rel="stylesheet" href="../reveal/dist/reveal.css">
+
 <!--    <link rel="stylesheet" href="../reveal/dist/theme/black.css" id="theme">-->
     <link rel="stylesheet" href="../reveal/dist/theme/beige.css" id="theme">
 
     <link rel="stylesheet" href="../reveal/plugin/highlight/monokai.css" id="highlight-theme">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
     <link rel="stylesheet" href="../reveal-custom/css/extras.css">
 
+    <!-- Only include those if embedding Vega-Lite charts: -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.6.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
 
+    <!-- Only include those if embedding Apache ECharts: -->
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.0/dist/echarts.js"></script>
+    <!-- Only include this if embedding 3D Apache ECharts: -->
     <script src="https://cdn.jsdelivr.net/npm/echarts-gl@2.0.9/dist/echarts-gl.min.js"></script>
 </head>
 
 
 <body>
 <div class="reveal"><div class="slides">
-    <section title="Inking preloaded data" data-inner-html="sect-inking-preload.html"></section>
-    <section title="SVG with math" data-inner-html="sect-svg.html"></section>
-    <section title="Embedding vega-lite charts" data-inner-html="sect-altair.html"></section>
-    <section title="Python code" data-qinner-html="sect-python.html"></section>
     <section title="Title" data-inner-html="sect-title.html"></section>
-    <section title="External.js plugin" data-outer-html="sect-external.html"></section>
-    <section title="PDF images"><canvas style="height: 400px; width: 600px;" data-pdf="img/one-liners.pdf" width=600 height=400></canvas></section>
-    <section title="PDF images">
-        <canvas class="r-stretch" style="height: 1000px; width: 600px;" data-pdf="img/one-liners.pdf" data-pages="1,3;18-20" width=600 height=400></canvas>
-    </section>
+    <section title="Math" data-inner-html="sect-math.html"></section>
+    <section title="Inking" data-inner-html="sect-inking.html"></section>
+    <section title="Embedding vega-lite charts" data-inner-html="sect-charts.html"></section>
+    <section title="Loding content and executing actions" data-inner-html="sect-external.html"></section>
+    <section title="PDF inclusion" data-inner-html="sect-pdf.html"></section>
+    <section title="Python code" data-inner-html="sect-python.html"></section>
 </div></div>
 
 
+<!-- Reveal.js and its factory plugins: -->
 <script src="../reveal/dist/reveal.js"></script>
 <script src="../reveal/plugin/notes/notes.js"></script>
-<script src="../reveal/plugin/highlight/highlight.js"></script>
 
+<!-- Plugin for loading the external content, including PDFs: -->
 <script src="../reveal-custom/plugins/content-loader.js"></script>
 
+<!-- RevealMenu plugin: -->
 <link rel="stylesheet" href="../reveal-custom/plugins/menu/font-awesome/css/all.css">
 <link rel="stylesheet" href="../reveal-custom/plugins/menu/menu.css">
 <script src="../reveal-custom/plugins/menu/menu.js"></script>
 
-
+<!-- Use for MathJax-powered maths: -->
 <script src="../reveal-custom/plugins/math.js"></script>
-<!--<script src="../reveal-custom/plugins/math-katex/math-katex.js"></script>-->
+<!-- Use for KaTeX-powered maths: -->
+<!--<script src="../reveal-custom/plugins/math-katex.js"></script>-->
 
+<!-- Code highlighting with editable code blocks. Powered by ACE.js editor -->
 <script src="../reveal-custom/plugins/highlight-ace.js"></script>
+<!-- In-browser code execution. Supports sympy, numpy, pandas. Powered by Pyodide -->
+<script src="../reveal-custom/plugins/pyodide.js"></script>
 
+<!-- Interactive whiteboard on top of the slide deck. Powered by Fabric.js and MathJax. -->
 <script src="../reveal-custom/plugins/inking.js"></script>
-<script src="../reveal-custom/plugins/zoom.js"></script>
+
+<!-- Display the webcam of the presenter along with the slides. -->
 <script src="../reveal-custom/plugins/webcam.js"></script>
 
-<script src="../reveal-custom/plugins/pyodide.js"></script>
+<!-- Modified stock zooming plugin -->
+<script src="../reveal-custom/plugins/zoom.js"></script>
+
 
 <script type="text/latex" id="mathjaxPreamble">
     \DeclareMathOperator{\roots}{roots}
@@ -111,17 +123,17 @@
             // RevealHighlight,
             // RevealNotes,
 
-            RevealMenu,
+            // RevealMenu,
             RevealMath,
             RevealInking,
-            RevealZoom,
+            // RevealZoom,
             RevealHighlightAce,
             // RevealWebcam,
             RevealPyodide
         ],
         slideNumber: true,
-        // width: 1280,
-        // height: 720,
+        width: 1280,
+        height: 720,
         margin: 0.05,
         // minScale: 1.0,
         // maxScale: 1.0,
@@ -137,7 +149,7 @@
             },
             actions: [
                 {
-                    selector: '.slides .auto-fragmentize',
+                    selector: '.auto-fragmentize',
                     init: e => e.childNodes.forEach(c => c.classList && c.classList.add('fragment'))
                 },
                 {
@@ -153,10 +165,15 @@
                         window.vegaEmbed(element, element.dataset['vegaJson'], {
                             mode: 'vega-lite',
                             renderer: 'svg',
-                            theme: 'dark',
+                            theme: 'default',
+                            // try other themes:
+                            // dark, excel, ggplot2, quartz, vox, fivethirtyeight,
+                            // latimes, urbaninstitute, googlecharts, powerbi
+                            // See all of them at https://vega.github.io/vega-themes/
                             actions: false,
                             tooltip: {
-                                theme: 'dark'
+                                // Change this along with the main Vega-Embed theme:
+                                theme: 'default'
                             }
                         });
                     }
