--- a/demo/sect-title.html
+++ b/demo/sect-title.html
@@ -1,9 +1,2 @@
-<h1>My reveal.js plugins demo</h1>
-<footer>Presenter plugins: webcam, inking, math, external</footer>
-
-<div data-inner-html><!--
-function(e) {
-    e.addEventListener('click', ()=>{console.log("!")});
-    return "<span>" + [1,2,3].join('</span>+<span>') + "</span>"
-}
---></div>
+<h2>Reveal.js plugins for Math &amp; CS instructors</h2>
+<footer>Alex Dainiak</footer>
