--- a/demo/sect-charts.html
+++ b/demo/sect-charts.html
@@ -3,9 +3,9 @@
     <p>Diagrams can be embedded using the <em>actions</em> mechanism of the content loader plugin.</p>
 </section>
 
-<section data-hide-inking-canvas>
+<section >
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
-    <p>A <a href="https://networkx.org/">NetworkX</a> graph visualized with <a href="https://github.com/Zsailer/nx_altair">nx-altair</a> and displayed using
+    <p>A <a href="https://networkx.org/">NetworkX</a> graph visualized with <a href="https://pypi.org/project/nx-altair/">nx_altair</a> and displayed using
         <a href="http://github.com/vega/vega-embed">Vega-Embed</a>, pan/zoom with mouse.</p>
     <div id="vega" class="vegachart r-stretch" data-vega-json="img/altair-graph.json"></div>
 </section>
