--- a/demo/sect-inking.html
+++ b/demo/sect-inking.html
@@ -1,5 +1,6 @@
 <section>
     <h3>Interactive whiteboard</h3>
+    <p>Powered by <a href="https://github.com/fabricjs/fabric.js">Fabric.js</a></p>
 </section>
 
 <section data-show-inking-canvas>
@@ -7,14 +8,14 @@
     <ul>
         <li><kbd>Ctrl+LeftClick+Drag</kbd> to draw freely</li>
         <li>While in drawing mode you can choose color from the menu at the bottom of the page.</li>
-        <li><kbd>=</kbd> to insert math (LaTeX) at the current mouse position</li>
+        <li><kbd>=</kbd> to insert math (LaTeX) at the current mouse position or modify currently selected math</li>
         <li><kbd>Shift+LeftClick+Drag</kbd> to erase elements</li>
         <li><kbd>Click+Drag</kbd> to select/move elements</li>
         <li><kbd>Del</kbd> to remove selected elements</li>
         <li><kbd>Q</kbd> to show/hide canvas</li>
         <li><kbd>-</kbd> to clear canvas</li>
         <li><kbd>Alt+LeftClick</kbd> to show spotlight</li>
-        <li><kbd>Z</kbd> to save the current canvas content as svg or current/all slides as json that you can preload onto the slides in future talks.</li>
+        <li><kbd>Z</kbd> to save the current canvas content as SVG or current/all slides as json that you can preload onto the slides in future talks or in different slide decks.</li>
     </ul>
 </section>
 
