--- a/demo/sect-math.html
+++ b/demo/sect-math.html
@@ -1,7 +1,8 @@
 <section>
     <h3>Math in Reveal.js</h3>
     <p>Below there are some slides showcasing math typesetting within slides.</p>
-    <p>Note that you can have native reveal.js fragments inside math formulas (for both KaTeX- and MathJax-powered typeset) and even inside SVGs (for MathJax-powered math).</p>
+    <p>Note that you can have native reveal.js fragments inside math formulas (for both <a href="https://github.com/KaTeX/KaTeX">KaTeX</a>- and
+        <a href="https://github.com/mathjax/MathJax">MathJax</a>-powered typeset) and even inside SVGs (for MathJax-powered math).</p>
 </section>
 
 <section data-menu-title="Defining finite fields">
@@ -84,7 +85,7 @@
 </section>
 
 <section data-menu-title="Fragment indices">
-    <p>One side-effect of using the custom Math plugin is the shorthands <code>fragidx-&lt;N&gt;</code> that you can use instead of <code>fragment</code>+<code>data-fragment-index</code></p>
+    <p>One side effect of using the custom Math plugin is the shorthands <code>fragidx-&lt;N&gt;</code> that you can use instead of <code>fragment</code>+<code>data-fragment-index</code></p>
     <ul>
         <li class="fragidx-1">one</li>
         <li class="fragidx-3">three</li>
