--- a/demo/sect-pdf.html
+++ b/demo/sect-pdf.html
@@ -1,5 +1,6 @@
 <section>
     <h3>Embedding PDFs as images</h3>
+    <p>Powered by <a href="https://github.com/mozilla/pdf.js">PDF.js</a></p>
 </section>
 
 <section title="PDF images">
