--- a/demo/sect-python.html
+++ b/demo/sect-python.html
@@ -1,5 +1,7 @@
 <section>
-  <h3>Python live coding in the slides using <a href="https://pyodide.org/">Pyodide</a></h3>
+  <h3>Python live coding in the slides</h3>
+  <p>Python code execution powered by <a href="https://pyodide.org/">Pyodide</a>.
+    Highlighting powered by <a href="https://ace.c9.io/">Ace Editor</a></p>
 </section>
 
 <section data-hide-inking-canvas>
