Refactor inking.js event handlers.

--- a/demo/sect-inking.html
+++ b/demo/sect-inking.html
@@ -12,10 +12,10 @@
         <li><kbd>Shift+LeftClick+Drag</kbd> to erase elements</li>
         <li><kbd>Click+Drag</kbd> to select/move elements</li>
         <li><kbd>Del</kbd> to remove selected elements</li>
-        <li><kbd>Q</kbd> to show/hide canvas</li>
+        <li><kbd>q</kbd> to show/hide canvas</li>
         <li><kbd>-</kbd> to clear canvas</li>
-        <li><kbd>Alt+LeftClick</kbd> to show spotlight</li>
-        <li><kbd>Z</kbd> to save the current canvas content as SVG or current/all slides as json that you can preload onto the slides in future talks or in different slide decks.</li>
+        <li><kbd>Alt+LeftClick</kbd> or <kbd>x</kbd> to show spotlight</li>
+        <li><kbd>z</kbd> to save the current canvas content as SVG or current/all slides as json that you can preload onto the slides in future talks or in different slide decks.</li>
     </ul>
 </section>
 
