Added renderer attributes to math plugins.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -32,12 +32,14 @@
 <body>
 <div class="reveal"><div class="slides">
     <section title="Title" data-inner-html="sect-title.html"></section>
+    <section title="Webcam" data-inner-html="sect-webcam.html"></section>
     <section title="Math" data-inner-html="sect-math.html"></section>
     <section title="Inking" data-inner-html="sect-inking.html"></section>
     <section title="Embedding vega-lite charts" data-inner-html="sect-charts.html"></section>
     <section title="Loding content and executing actions" data-inner-html="sect-external.html"></section>
     <section title="PDF inclusion" data-inner-html="sect-pdf.html"></section>
     <section title="Python code" data-inner-html="sect-python.html"></section>
+    <section title="Summary" data-inner-html="sect-summary.html"></section>
 </div></div>
 
 
@@ -125,7 +127,7 @@
 
             // RevealMenu,
 
-            // RevealWebcam,
+            RevealWebcam,
             // RevealZoom,
             RevealMath,
             RevealInking,
