--- a/demo/sect-charts.html
+++ b/demo/sect-charts.html
@@ -3,7 +3,7 @@
     <p>Diagrams can be embedded using the <em>actions</em> mechanism of the content loader plugin.</p>
 </section>
 
-<section >
+<section data-hide-inking-canvas>
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
     <p>A <a href="https://networkx.org/">NetworkX</a> graph visualized with <a href="https://pypi.org/project/nx-altair/">nx_altair</a> and displayed using
         <a href="http://github.com/vega/vega-embed">Vega-Embed</a>, pan/zoom with mouse.</p>
