--- a/demo/sect-math.html
+++ b/demo/sect-math.html
@@ -60,9 +60,9 @@
 <section data-menu-title="Discrete logarithm">
     <div class="proposition">
         <div class="statement">
-            If we fix a primitive root \(\alpha,\)
+            <p>If we fix a primitive root \(\alpha,\)
             then for every \(x\in \bbF\setminus\{0\}\) we can define a
-            <span class="term">discrete logarithm</span>: \(\log_\alpha x \), having many properties similar to the “ordinary logarithm”:
+            <span class="term">discrete logarithm</span>: \(\log_\alpha x \), having many properties similar to the “ordinary logarithm”:</p>
             <ul>
                 <li class="fragment">\(\log_\alpha (xy)=(\log_\alpha x + \log_\alpha y)\vstep{?}\next{\bmod \card\Fstar,}\)</li>
                 <li class="fragment">\(x^{\log_\alpha y}=y^{\log_\alpha x},\)</li>
