--- a/demo/sect-inking.html
+++ b/demo/sect-inking.html
@@ -26,7 +26,7 @@
 </section>
 
 <section data-show-inking-canvas data-inking-canvas-src="img/venn-diagram-unlabeled.svg:split">
-    This is a slide with preloaded SVG which is split into individual pieces.
+    This is a slide with preloaded SVG which is split into individual pieces. Try dragging them around!
 </section>
 
 <section
