--- a/demo/sect-summary.html
+++ b/demo/sect-summary.html
@@ -1,3 +1,12 @@
 <section>
-
+<h4>Summary</h4>
+    <ul>
+        <li><code>content-loader.js</code> &mdash; load the slide deck, images etc from different files, load PDFs, perform automated actions on the loaded content, </li>
+        <li><code>highlight-ace.js</code>  &mdash; programming language code highlighting and live editing,</li>
+        <li><code>pyodide.js</code> &mdash; live python code execution on the slides, plays nicely with <code>highlight-ace.js</code>,</li>
+        <li><code>inking.js</code> &mdash; interactive whiteboard with free handwriting, SVG images, math formulas (best if used along <code>math.js</code>), + mouse spotlight,</li>
+        <li><code>math.js</code> &mdash; a drop-in replacement for the stock math plugin, supports LaTeX preamble, math in SVG, fragments,</li>
+        <li><code>math-katex.js</code> &mdash; a math plugin powered by KaTeX, designed to be interchangable with <code>math.js</code> (only lacking typeset capabilities of math inside SVGs),</li>
+        <li><code>webcam.js</code> &mdash; display the webcam of the presenter on top of the slides.</li>
+    </ul>
 </section>
