--- a/demo/sect-summary.html
+++ b/demo/sect-summary.html
@@ -7,6 +7,7 @@
         <li><code>inking.js</code> &mdash; interactive whiteboard with free handwriting, SVG images, math formulas (best if used along <code>math.js</code>), + mouse spotlight,</li>
         <li><code>math.js</code> &mdash; a drop-in replacement for the stock math plugin, supports LaTeX preamble, math in SVG, fragments,</li>
         <li><code>math-katex.js</code> &mdash; a math plugin powered by KaTeX, designed to be interchangable with <code>math.js</code> (only lacking typeset capabilities of math inside SVGs),</li>
-        <li><code>webcam.js</code> &mdash; display the webcam of the presenter on top of the slides.</li>
+        <li><code>webcam.js</code> &mdash; display the webcam of the presenter on top of the slides,</li>
+        <li><code>cssanimation.js</code> &mdash; declarative animation of CSS properties liked to native reveal.js fragments.</li>
     </ul>
 </section>
