--- a/demo/sect-charts.html
+++ b/demo/sect-charts.html
@@ -7,7 +7,7 @@
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
     <p>A <a href="https://networkx.org/">NetworkX</a> graph visualized with <a href="https://pypi.org/project/nx-altair/">nx_altair</a> and displayed using
         <a href="http://github.com/vega/vega-embed">Vega-Embed</a>, pan/zoom with mouse.</p>
-    <div id="vega" class="vegachart r-stretch" data-vega-json="img/altair-graph.json"></div>
+    <div class="vegachart r-stretch" data-vega-json="img/altair-graph.json"></div>
 </section>
 
 <section data-hide-inking-canvas>
