--- a/demo/sect-inking.html
+++ b/demo/sect-inking.html
@@ -12,6 +12,12 @@
         <li><kbd>Shift+LeftClick+Drag</kbd> to erase elements</li>
         <li><kbd>Click+Drag</kbd> to select/move elements</li>
         <li><kbd>Del</kbd> to remove selected elements</li>
+    </ul>
+</section>
+
+<section data-show-inking-canvas>
+    <p>Available keys (contd.):</p>
+    <ul>
         <li><kbd>q</kbd> to show/hide canvas</li>
         <li><kbd>-</kbd> to clear canvas</li>
         <li><kbd>Alt+LeftClick</kbd> or <kbd>x</kbd> to show spotlight</li>
