--- a/demo/sect-charts.html
+++ b/demo/sect-charts.html
@@ -7,7 +7,13 @@
     <h4>Embed Altair (Vega-Lite) diagrams</h4>
     <p>A <a href="https://networkx.org/">NetworkX</a> graph visualized with <a href="https://pypi.org/project/nx-altair/">nx_altair</a> and displayed using
         <a href="http://github.com/vega/vega-embed">Vega-Embed</a>, pan/zoom with mouse.</p>
-    <div class="vegachart r-stretch" data-vega-json="img/altair-graph.json"></div>
+    <iframe class="r-stretch" data-vega="img/altair-graph.json"></iframe>
+</section>
+
+<section data-hide-inking-canvas>
+    <h4>Embed Altair (Vega-Lite) diagrams</h4>
+    <p>An interactive line chart from <a href="https://altair-viz.github.io/gallery/multiline_tooltip.html">Altair Gallery</a>.</p>
+    <iframe class="r-stretch" data-vega="img/altair-timeline.json"></iframe>
 </section>
 
 <section data-hide-inking-canvas>
